feat(.env): add REGION environment variable to specify deployment region feat(staging-deployment.yml): add REGION to set-env-vars to use in deployment feat(main.py): use REGION environment variable in hello_http response to display deployment region

--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -40,6 +40,7 @@ jobs:
           --gen2 \
           --runtime=python311 \
           --region=asia-southeast1 \
+          --set-env-vars REGION='${{ secrets.REGION }}' \
           --source=./ \
           --entry-point=hello_http \
           --trigger-http \
