--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -40,7 +40,7 @@ jobs:
           --gen2 \
           --runtime=python311 \
           --region=asia-southeast1 \
-          --set-env-vars REGION='${{ secrets.REGION }}' \
+          --set-env-vars REGION='${{ secrets.REGION }}',TEST_ID='${{ secrets.TEST_ID }}' \
           --source=./ \
           --entry-point=hello_http \
           --trigger-http \
